<resources>
    <string name="app_name">Jumia Transfer</string>

    <!-- value proposition-->
    <string name="vp_highlight">Effectuer vos transferts vers Jumia en toute</string>
    <string name="vp_highlight_case_1">sécurité</string>
    <string name="vp_highlight_case_2">simplicité</string>
    <string name="vp_highlight_case_3">sérénité</string>
    <string name="vp_cta">Effectuer un transfert</string>

    <string name="form_cta">Continuer</string>
    <string name="form_email_title">Mon email</string>
    <string name="form_email_hint">Email</string>
    <string name="form_email_empty">L\'email est obligatoire</string>
    <string name="form_email_invalid">Cet email n\'est pas valide</string>

    <string name="form_wallet_id_title">Selectionnez l\'ID du compte Jumia de destination</string>
    <string name="form_wallet_id_hint">Jumia Wallet ID</string>
    <string name="form_wallet_id_empty">Le Wallet ID est obligatoire</string>
    <string name="form_wallet_id_invalid">Le Wallet ID est composé de 8 caractères</string>

    <string name="form_wallet_history_title">Depuis mon historique</string>
    <string name="form_wallet_history_item">• </string>

    <string name="amount_cta">Continuer</string>
    <string name="amount_title">Montant du transfert</string>
    <string name="amount_hint">Montant</string>
    <string name="amount_empty">Veuillez préciser le montant</string>

    <string name="summary_cta">Confirmer</string>
    <string name="summary_title">Confirmer le transfert</string>
    <string name="summary_email">Email</string>
    <string name="summary_wallet_id">Jumia Wallet ID</string>
    <string name="summary_amount">Montant</string>


    <string name="confirmation_cta">Terminer</string>

    <string name="confirmation_title">Félicitation,\nle montant de %1$s\na bien été envoyé à\n%2$s</string>

</resources>